[package]
name = "peek"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
nix = { version = "0.31.3", features = ["socket", "poll", "fs", "net", "event"] }
libc = "0.2"
pnet_packet = "0.35.0"
rand = "0.10.2"

owo-colors = "4"
clap = { version = "4.6.1", features = ["derive"] }
